--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^1.2.0",
+    "egg-sequelize": "^6.0.0",
     "egg-view-nunjucks": "^2.3.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "autod": "^3.0.1",
