--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "start": "egg-scripts start --daemon --title=egg-server-test",
     "start:docker": "egg-scripts start --title=egg-server-test",
     "stop": "egg-scripts stop --title=egg-server-test",
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --env=dev",
+    "test": "egg-bin dev --env=test",
     "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
