--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "egg-scripts start --daemon --title=egg-server --env=prod",
     "start:docker": "egg-scripts start --title=egg-server --env=prod",
     "stop": "egg-scripts stop --title=egg-server",
-    "dev": "egg-bin dev --env=dev",
+    "dev": "egg-bin dev --env=test",
     "test": "egg-bin dev --env=test",
     "debug": "egg-bin debug",
     "test-local": "egg-bin test",
