--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "declarations": true
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^1.2.0",
     "egg-sequelize": "^6.0.0",
+    "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa-json-error": "^3.1.2",
     "moment": "^2.29.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
