埋点系统的接口开发

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "koa-json-error": "^3.1.2",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
-    "uuid": "^8.3.2"
+    "silly-datetime": "^0.1.2",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
